--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Complete Responsive Personal Portfolio Website HTML CSS Javascript | Codehal</title>
+    <title>RST</title>
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="images/trusted.ico"
 
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -67,6 +68,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <h2 class="heading">About <span>Us</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <title>About</title>
 
         <div class="about-img">
             <img src="images/about.jpg" alt="">
@@ -94,6 +96,7 @@
     <!-- education section design -->
     <section class="education" id="education">
         <h2 class="heading">Us <span>Games</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <title>Education</title>
 
         <div class="education-row">
             <div class="education-column">
@@ -177,6 +180,7 @@
     <!-- skills section design -->
     <section class="skills" id="skills">
         <h2 class="heading">Us <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <title>Skills</title>
 
         <div class="skills-row">
             <div class="skills-columm">
@@ -244,6 +248,7 @@
     <!-- contact section design -->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>US!</span><span class="animate scroll" style="--i:1;"></span></h2>
+        <title>Contact</title>
 
         <form action="#">
             <div class="input-box">
