--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RST</title>
+    <title id="pageTitle">RST</title>
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/trusted.ico"
+
 
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
+
     <!-- header design -->
     <header class="header">
         <a href="#" class="logo">RST<span class="animate" style="--i:1;"></span></a>
@@ -55,8 +57,8 @@
         </div>
 
         <div class="home-sci">
-            <a href="#"><i class='bx bxl-discord' ></i></a>
-            <a href="#"><i class='bx bxl-youtube'></i></a>
+            <a href="https://discord.gg/PZGPmUyM6U" target="_blank"><i class='bx bxl-discord' ></i></a>
+            <a href="https://www.youtube.com/@RST_1/featured" target="_blank"><i class='bx bxl-youtube'></i></a>
             <a href="#"><i class='bx bxl-twitter'></i></a>
             <span class="animate" style="--i:6;"></span>
         </div>
@@ -68,7 +70,6 @@
     <!-- about section design -->
     <section class="about" id="about">
         <h2 class="heading">About <span>Us</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <title>About</title>
 
         <div class="about-img">
             <img src="images/about.jpg" alt="">
@@ -96,7 +97,6 @@
     <!-- education section design -->
     <section class="education" id="education">
         <h2 class="heading">Us <span>Games</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <title>Education</title>
 
         <div class="education-row">
             <div class="education-column">
@@ -180,7 +180,6 @@
     <!-- skills section design -->
     <section class="skills" id="skills">
         <h2 class="heading">Us <span>Skills</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <title>Skills</title>
 
         <div class="skills-row">
             <div class="skills-columm">
@@ -248,7 +247,6 @@
     <!-- contact section design -->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>US!</span><span class="animate scroll" style="--i:1;"></span></h2>
-        <title>Contact</title>
 
         <form action="#">
             <div class="input-box">
@@ -306,6 +304,23 @@
             </div>
     </footer>
 
+    <!-- footer design -->
+
+    <body>
+        <link rel="stylesheet" href="css/">
+        <div id="container">
+            <div class="container">
+                <h2>404</h2>
+                <h4>Opps! Page not found</h4>
+                <p>The page you were looking for doesn't exist. You may have mistyped the adress
+                or the page may have moved.</p>
+                <a href="#"></a>
+                <div class="btn-box btns">
+                    <a href="#" class="btn">Back</a>
+                 </div>
+            </div>
+        </div>
+    </body>
 
     <script src="js/script.js"></script>
 </body>
