--- a/404.html
+++ b/404.html
@@ -2,9 +2,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>404 ERROR</title>
+    <link rel="stylesheet" href="css/404.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h2>Oops! Page not found.</h2>
+        <h1>404</h1>
+        <p>We can't find the page you're looking for.</p>
+        <div class="btn-box btns">
+            <a href="https://rsts.netlify.app" class="btn">Go Home</a>
+         </div>
+    </div>
 </body>
 </html>
