--- a/index.html
+++ b/index.html
@@ -42,16 +42,13 @@
                 <h3>RB Satefy Company</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde amet voluptatibus nulla aperiam
-            alias reprehenderit animi a iste esse facilis,
-            eligendi debitis commodi magni possimus,
-            distinctio hic.
+            <p>We are a company that provides security in roblox games! We are against LBGT, insults and politics! We wish you all the best! - RST CO OWNER
             <span class="animate" style="--i:4;"></span>
         </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Hire Me</a>
-                <a href="#" class="btn">Let's Talk</a>
+                <a href="#about" class="btn">Read More</a>
+                <a href="#contact" class="btn">Let's Talk</a>
                 <span class="animate" style="--i:5;"></span>
             </div>
         </div>
@@ -79,18 +76,13 @@
 
         <div class="about-content">
             <h3>RB Satefy Company<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus inventore sunt nostrum,
-             a ipsum modi non tempore excepturi cum cupiditate ex, aliquid dicta commodi adipisci minima esse quos!
-             Repellendus odio nobis, nulla illo cupiditate tenetur dolorem quis iusto debitis praesentium nostrum nihil
-             at, consectetur culpa, quo voluptatibus illum possimus
-             accusamus.
+            <p>Hello my name is Lev! Now I will tell you a little about the RST company. It was founded in 2021. We focus exclusively on the security of games and game content! We are happy to help everyone. We do not support LGBT, politics, or toxicity in games. And a memorable future is yours!
              <span class="animate scroll" style="--i:4;"></span>
             </p>
 
-             <div class="btn-box btns">
-                <a href="#" class="btn">Read More</a>
+            <p>Мы компания которая занимается обеспечением безопасности в играх roblox! Мы против LBGT, оскорблений и политики! Желаем всего самого наилучше! - RST  CO OWNER
                 <span class="animate scroll" style="--i:5;"></span>
-             </div>
+               </p>
         </div>
     </section>
 
