--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#education">Education</a>
+            <a href="#games">Games</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
 
@@ -76,52 +76,46 @@
 
         <div class="about-content">
             <h3>RB Satefy Company<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>Hello my name is Lev! Now I will tell you a little about the RST company. It was founded in 2021. We focus exclusively on the security of games and game content! We are happy to help everyone. We do not support LGBT, politics, or toxicity in games. And a memorable future is yours!
+            <p>Hello my name is Leo! Now I will tell you a little about the RST company. It was founded in 2021. We are engaged in the security of games and game content! We are happy to help everyone. We do not support LGBT, politics, or toxicity in games. And a memorable future is yours! We are also a game development studio!
              <span class="animate scroll" style="--i:4;"></span>
             </p>
 
-            <p>Мы компания которая занимается обеспечением безопасности в играх roblox! Мы против LBGT, оскорблений и политики! Желаем всего самого наилучше! - RST  CO OWNER
+            <p>Привет меня зовут Лев! Сейчас я немного расскажу о компании RST. Она была основана в 2021 году мы занимаемся  безопасностью игр и игрового контента! Мы рады помочь каждому. Мы не поддерживаем LGBT, политику, токсичность в играх. И помнитое будущее за вами! Также мы студия по разработке игр!
                 <span class="animate scroll" style="--i:5;"></span>
                </p>
         </div>
     </section>
 
-    <!-- education section design -->
-    <section class="education" id="education">
+    <!-- games section design -->
+    <section class="games" id="games">
         <h2 class="heading">Us <span>Games</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <div class="education-row">
-            <div class="education-column">
-                <h3 class="title">Education<span class="animate scroll" style="--i:2;"></span></h3>
+        <div class="games-row">
+            <div class="games-column">
+                <h3 class="title">Games<span class="animate scroll" style="--i:2;"></span></h3>
 
-                <div class="education-box">
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020</div>
-                            <h3>Master Degree - Universitety</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                             Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
-                            ipsam aut ea quis?</p>
-                        </div>
-                    </div>
-
-                    <div class="education-content">
+                <div class="games-box">
+                    <div class="games-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021</div>
-                            <h3>Master Degree - Universitety</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                             Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
-                            ipsam aut ea quis?</p>
+                            <h3>OOF OBBY</h3>
+                            <p>This is a game about obby but there is a catch, obby with trolling! This idea came to us when we played "TROLL OBBY" at that time.</p>
                         </div>
                     </div>
 
-                    <div class="education-content">
+                    <div class="games-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2021 - 2022</div>
-                            <h3>Master Degree - Universitety</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                             Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
-                            ipsam aut ea quis?</p>
+                            <div class="year"><i class='bx bxs-calendar' ></i>2021</div>
+                            <h3>SCPF ROLEPLAY</h3>
+                            <p>This is a game about the SCP Foundation where various pan-aromal creatures are kept, and you play as either a guard or a prisoner</p>
+                        </div>
+                    </div>
+
+                    <div class="games-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar' ></i>2022 - 2023</div>
+                            <h3>TOMSK RP</h3>
+                            <p>This is a game about a realistic world where everyone is behind you. You can become a policeman or a bandit, you can rob, participate in shootouts and much more!</p>
                         </div>
                     </div>
 
@@ -129,34 +123,34 @@
                 </div>
             </div>
 
-            <div class="education-column">
-                <h3 class="title">Experience<span class="animate scroll" style="--i:5;"></span></h3>
+            <div class="games-column">
+                <h3 class="title">UpComing<span class="animate scroll" style="--i:5;"></span></h3>
 
-                <div class="education-box">
-                    <div class="education-content">
+                <div class="games-box">
+                    <div class="games-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2019 - 2020</div>
-                            <h3>Web Developer - Company</h3>
+                            <div class="year"><i class='bx bxs-calendar' ></i>202?</div>
+                            <h3>GameTest</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                              Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
                             ipsam aut ea quis?</p>
                         </div>
                     </div>
 
-                    <div class="education-content">
+                    <div class="games-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2020 - 2021</div>
-                            <h3>Web Developer - Company</h3>
+                            <div class="year"><i class='bx bxs-calendar' ></i>202?</div>
+                            <h3>GameTest</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                              Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
                             ipsam aut ea quis?</p>
                         </div>
                     </div>
 
-                    <div class="education-content">
+                    <div class="games-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar' ></i>2021 - 2022</div>
-                            <h3>Web Developer - Company</h3>
+                            <div class="year"><i class='bx bxs-calendar' ></i>202?</div>
+                            <h3>GameTest</h3>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                              Perspiciatis saepe explicabo nesciunt voluptatibus eum obcaecati aspernatur,
                             ipsam aut ea quis?</p>
@@ -175,27 +169,27 @@
 
         <div class="skills-row">
             <div class="skills-columm">
-                <h3 class="title">Coding Skills<span class="animate scroll" style="--i:1;"></span></h3>
+                <h3 class="title">Studio Skills<span class="animate scroll" style="--i:1;"></span></h3>
 
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>HTML  <span>90%</span></h3>
+                            <h3>LUA  <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>CSS  <span>80%</span></h3>
+                            <h3>UI  <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>JavaScript  <span>65%</span></h3>
+                            <h3>Building  <span>95%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Python  <span>75%</span></h3>
+                            <h3>Game Design  <span>75%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -210,22 +204,22 @@
                 <div class="skills-box">
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>Web Design  <span>95%</span></h3>
+                            <h3>Game Satefy  <span>95%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Web Development  <span>67%</span></h3>
+                            <h3>Social  <span>80%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>Graphic Design  <span>85%</span></h3>
+                            <h3>Staff  <span>90%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
                         <div class="progress">
-                            <h3>SEO Marketing  <span>60%</span></h3>
+                            <h3>Marketing  <span>60%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
