--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>US!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <form action="/php//process_form.php" method="post">
+        <form action="/php//process_form.php" method="POST">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Full Name" name="name" required>
