--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>US!</span><span class="animate scroll" style="--i:1;"></span></h2>
 
-        <form action="/php//process_form.php" method="POST">
+        <form action="process_form.php" method="post">
             <div class="input-box">
                 <div class="input-field">
                     <input type="text" placeholder="Full Name" name="name" required>
@@ -254,7 +254,7 @@
                         <span class="focus"></span>
                     </div>
                     <div class="input-field">
-                        <input type="text" placeholder="Email Subject" required>
+                        <input type="text" placeholder="Email Subject" name="subject" required>
                         <span class="focus"></span>
                     </div>
 
@@ -268,7 +268,7 @@
                 <span class="animate scroll" style="--i:7;"></span>
             </div>
             <div class="btn-box btns">
-                <button type="submit" class="btn" name="send">Submit</button>
+                <button type="submit" class="btn">Submit</button>
 
                 <span class="animate scroll" style="--i:9;"></span>
             </div>
